PR/47608: Robert Elz: ``var=value func-call'' does not export var in the function (+FIX)